logs/ckanext-xloader.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ckanext'...
Listing './lib/python3.5/site-packages/ckanext/xloader'...
Compiling './lib/python3.5/site-packages/ckanext/xloader/cli.py'...
***   File "./lib/python3.5/site-packages/ckanext/xloader/cli.py", line 53
    print self.usage
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ckanext/xloader/fanstatic'...
Listing './lib/python3.5/site-packages/ckanext/xloader/i18n'...
Compiling './lib/python3.5/site-packages/ckanext/xloader/jobs.py'...
***   File "./lib/python3.5/site-packages/ckanext/xloader/jobs.py", line 135
    except JobError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ckanext/xloader/plugin.py'...
***   File "./lib/python3.5/site-packages/ckanext/xloader/plugin.py", line 97
    except p.toolkit.ValidationError, e:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext/xloader/public'...
Listing './lib/python3.5/site-packages/ckanext/xloader/templates'...
Listing './lib/python3.5/site-packages/ckanext/xloader/templates/package'...
Listing './lib/python3.5/site-packages/ckanext/xloader/templates/xloader'...
Listing './lib/python3.5/site-packages/ckanext/xloader/templates-bs2'...
Listing './lib/python3.5/site-packages/ckanext/xloader/templates-bs2/package'...
Listing './lib/python3.5/site-packages/ckanext/xloader/templates-bs2/xloader'...
Listing './lib/python3.5/site-packages/ckanext/xloader/tests'...
Listing './lib/python3.5/site-packages/ckanext/xloader/tests/samples'...
Compiling './lib/python3.5/site-packages/ckanext/xloader/tests/test_loader.py'...
***   File "./lib/python3.5/site-packages/ckanext/xloader/tests/test_loader.py", line 27
    print '{} {}: {}'.format(time, log_level.capitalize(), msg)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext_xloader-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
